syntax = "proto3";
package vegas;
option go_package = "./pb";

message UserRecord {
    bytes recordID = 1;
    string partitionKey = 2;
    bytes data = 3;
} 

message Record {
   string shardID = 1;
   repeated UserRecord userRecords = 2;
}
